Fixes in self-service code

--- a/code/dev/parts/auth/resend-subscription-info.html
+++ b/code/dev/parts/auth/resend-subscription-info.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h3 class="modal-title">Re-send verify instruction </h3>
+  <h3 class="modal-title">Need to re-send email verification instructions?</h3>
 </div>
 <div class="modal-body">
   <alert-list></alert-list>
