--- a/code/parts/profile/statements.html
+++ b/code/parts/profile/statements.html
@@ -121,9 +121,9 @@
                             <th>
                                 <p>Date</p>
                             </th>
-                            <th>
+                            <!-- <th>
                                 <p>Memo</p>
-                            </th>
+                            </th> -->
                             <th>
                                 <p>Amount</p>
                             </th>
@@ -136,7 +136,7 @@
                         <tr ng-repeat="statement in statements">
                             <td><a ui-sref="^.statement({id: statement.id})">{{statement.id}}</a></td>
                             <td>{{statement.opened_at | date : 'MMM d, y h:mm:ss a'}}</td>
-                            <td>{{statement.memo}}</td>
+                            <!-- <td>{{statement.memo}}</td>  -->
                             <td>{{statement.total_in_cents/100 | currency}}</td>
                             <td>{{statement.settled_at | date : 'MMM d, y h:mm:ss a'}}</td>
                         </tr>
