--- a/code/parts/signup/end.html
+++ b/code/parts/signup/end.html
@@ -26,6 +26,9 @@
                 Thank you for providing necessary user and payment information. Once we will complete the setting of your new account you will receive a welcome email, 
                 and after that you should be able to login to our customer portal using specified credentials.
               </p>
+              <p class="lead">
+                In 10 seconds you will be automatically redirected to the login page.
+              </p>
             </div>
           </div>
         </div>
