--- a/code/parts/signup/form-contact-info.tpl.html
+++ b/code/parts/signup/form-contact-info.tpl.html
@@ -8,6 +8,9 @@
         <p class="lead">
           We have sent an email with instructions to your email <b>{{$ctrl.model.email}}</b> - please continue the RevAPM registration process by following the link. Please also check your Spam mailbox.
         </p>
+        <p class="lead">
+          Now you can close the browser window.
+        </p>
       </div>
     </div>
   </div>
