--- a/code/parts/users/new.html
+++ b/code/parts/users/new.html
@@ -38,7 +38,7 @@
                      class="form-control"
                      id="email"
                      placeholder="Email"
-                     ng-model="model.user_email"
+                     ng-model="model.email"
                      ng-disabled="_loading">
             </div>
           </div>
