heatmaps redesigned to use highmaps lib, workd and us maps are being used, not finished

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -51,11 +51,16 @@
 <script type="text/javascript" src="bower_components/jsoneditor/dist/jsoneditor.min.js"></script>
 <script type="text/javascript" src="bower_components/Chart.js/Chart.js"></script>
 <script type="text/javascript" src="bower_components/moment/min/moment.min.js"></script>
+
 <script type="text/javascript" src="bower_components/highcharts/highcharts.js"></script>
+<script type="text/javascript" src="bower_components/highcharts/modules/map.js"></script>
+<!-- <script type="text/javascript" src="bower_components/highcharts/highmaps.js"></script> -->
 <script type="text/javascript" src="bower_components/highcharts/highcharts-3d.js"></script>
 <script type="text/javascript" src="bower_components/highcharts/highcharts-more.js"></script>
 <script type="text/javascript" src="bower_components/highcharts/modules/exporting.js"></script>
 <script type="text/javascript" src="bower_components/highcharts-export-csv/export-csv.js"></script>
+<!-- <script type="text/javascript" src="bower_components/highcharts/modules/data.js"></script> -->
+
 <script type="text/javascript" src="bower_components/d3/d3.min.js"></script>
 <script type="text/javascript" src="bower_components/topojson/topojson.js"></script>
 
@@ -68,7 +73,6 @@
 <script type="text/javascript" src='bower_components/Sortable/Sortable.min.js'></script>
 <script type="text/javascript" src='bower_components/Sortable/ng-sortable.js'></script>
 <script type="text/javascript" src='bower_components/angular-dashboard-framework/dist/angular-dashboard-framework.min.js'></script>
-
 
 <script type="text/javascript" src="bower_components/ngstorage/ngStorage.min.js"></script>
 <script type="text/javascript" src="bower_components/angular-base64/angular-base64.min.js"></script>
@@ -93,6 +97,9 @@
 <script type="text/javascript" src="bower_components/angular-daterangepicker/js/angular-daterangepicker.js"></script>
 <script type="text/javascript" src="bower_components/angular-bootstrap-toggle-switch/angular-toggle-switch.js"></script>
 
+<!-- maps -->
+<script type="text/javascript" src="js/heatmaps/highmap.us.js"></script>
+<script type="text/javascript" src="js/heatmaps/highmap.world.js"></script>
 
 <script src="config.js"></script>
 
