--- a/code/dev/parts/reports/heatmaps.html
+++ b/code/dev/parts/reports/heatmaps.html
@@ -51,8 +51,7 @@
             Loading...
           </div>
 
-          <div id="tooltip-container-hits" class="tooltip-container"></div>
-          <div id="canvas-svg-hits"></div>
+          <div id="canvas-svg-hits" style="position: relative;"></div>
 
         </div>
       </div>
@@ -67,8 +66,7 @@
             Loading...
           </div>
 
-          <div id="tooltip-container-gbt" class="tooltip-container"></div>
-          <div id="canvas-svg-gbt"></div>
+          <div id="canvas-svg-gbt" style="position: relative;"></div>
 
         </div>
       </div>
