--- a/code/dev/parts/signup/form-billing-plans.tpl.html
+++ b/code/dev/parts/signup/form-billing-plans.tpl.html
@@ -26,7 +26,7 @@
                 <div>{{item.description}}</div>
                 <h4>Overage Charges</h4>
                 <div class="billing-plan-services" ng-repeat="service in item.services">
-                  <div>${{service.cost}} per {{service.measurement_unit}}</div>
+                  <div>${{service.cost | number:2}} per {{service.measurement_unit}}</div>
                 </div>
               </div>
               <hr>
