--- a/code/dev/parts/signup/form-contact-info.tpl.html
+++ b/code/dev/parts/signup/form-contact-info.tpl.html
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="col-md-12">
         <p class="lead">
-          We have sent an email with instructions to your email <b>{{$ctrl.model.email}}</b> - please continue the RevAPM registration process by following the link. Please also check your Spam mailbox.
+          We have sent an email with verification link to your email address <b>{{$ctrl.model.email}}</b> - please continue the RevAPM registration process by following the link. Please also check your Spam mailbox.
         </p>
         <p class="lead">
           Now you can close the browser window.
@@ -33,9 +33,9 @@
       </div>
       <div class="form-group" ng-class="{ 'has-error': newUser.password.$invalid &&
                             newUser.password.$dirty }">
-        <label for="password" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="At least six symbols">Password *</label>
+        <label for="password" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="At least eight symbols">Password *</label>
         <div class="col-sm-10">
-          <input type="password" class="form-control" id="password" name="password" ng-model="$ctrl.model.password" minlength="6" required ng-disabled="_loading">
+          <input type="password" class="form-control" id="password" name="password" ng-model="$ctrl.model.password" minlength="8" required ng-disabled="_loading">
         </div>
       </div>
       <div class="form-group" ng-class="{ 'has-error':
@@ -69,7 +69,7 @@
       </div>
       <div class="form-group" ng-class="{ 'has-error': newUser.companyName.$invalid &&
                             newUser.companyName.$dirty }">
-        <label for="companyName" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="Should be unique across the system. Will be generated from your first and last name if left empty.">
+        <label for="companyName" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="Will be generated from your first and last name if left empty.">
           Company Name &nbsp;</label>
         <div class="col-sm-10">
           <input type="text" class="form-control" id="companyName" name="companyName" placeholder="Company Name" maxlength="250" ng-model="$ctrl.model.company_name" ng-disabled="_loading">
