--- a/code/dev/parts/auth/login.html
+++ b/code/dev/parts/auth/login.html
@@ -43,6 +43,9 @@
             <div class="form-group marl_med">
               <input type="button" id="forgot_password" ng-click="forgotPassword()" value="Forgot Password?" class="btn btn-link forgot_password">
             </div>
+            <div class="form-group marl_med pull-right">
+              <a ng-href="/#/signup/plans" class="btn btn-link">Sign Up</a>
+            </div>
           </div>
         </div>
         <div class="clearfix"></div>
