--- a/code/parts/signup/form-contact-info.tpl.html
+++ b/code/parts/signup/form-contact-info.tpl.html
@@ -116,6 +116,14 @@
       </div>
       <hr>
       <div class="form-group">
+        <div class="col-lg-12 subscribe-contact-info-terms">
+          By clicking on Sign Up you agree with our
+          <a href="https://www.revapm.com/tos/" target="_blank">Terms Of Service</a>,
+          <a href="https://www.revapm.com/aup/" target="_blank">Acceptable Use Policy</a> and
+          <a href="https://www.revapm.com/privacy/" target="_blank">Privacy Policy</a>
+        </div>
+      </div>
+      <div class="form-group">
         <div class="col-sm-offset-6 col-sm-6 pull-right">
           <a ui-sref="^" class="btn btn-default">
             <i class="glyphicon glyphicon-remove"></i>&nbsp; Cancel
