--- a/code/dev/parts/dashboard/widgets/heatmaps/view-gbt-heatmaps.tpl.html
+++ b/code/dev/parts/dashboard/widgets/heatmaps/view-gbt-heatmaps.tpl.html
@@ -2,12 +2,11 @@
   <div class="alert alert-info" ng-if="!config.domain">
     Please click on <i class="glyphicon glyphicon-cog"></i> icon to configure the widget
   </div>
-  <div class="alert alert-info" ng-if="!!config.domain&&!countryGBTData && !_loading">
+  <div class="alert alert-info" ng-if="!_data && !_loading">
     No data to display
   </div>
-  <div class="alert alert-info" ng-if="_loading && countryGBTData">
+  <div class="alert alert-info" ng-if="_loading">
     <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>&nbsp; Loading...
   </div>
-  <div id="tooltip-container-gbt{{elId}}" class="tooltip-container"></div>
   <div id="canvas-svg-gbt{{elId}}"></div>
 </div>
