--- a/code/parts/reports/charts/fbt-heatmap.html
+++ b/code/parts/reports/charts/fbt-heatmap.html
@@ -29,6 +29,5 @@
   Loading
 </div>
 
-<div id="tooltip-container" class="tooltip-container"></div>
-<div id="canvas-svg"></div>
+<div id="canvas-svg" style="position: relative;"></div>
 
