--- a/code/parts/reports/lm-rtt-heatmaps.html
+++ b/code/parts/reports/lm-rtt-heatmaps.html
@@ -46,8 +46,7 @@
             Loading...
           </div>
 
-          <div id="tooltip-container" class="tooltip-container"></div>
-          <div id="canvas-svg"></div>
+          <div id="canvas-svg" style="position: relative;"></div>
 
         </div>
       </div>
