--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -8,6 +8,7 @@
   <title>RevAPM Customer Portal</title>
 
   <!-- Bootstrap -->
+  <link href="bower_components/PACE/themes/orange/pace-theme-minimal.css" rel="stylesheet">
   <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="bower_components/jsoneditor/dist/jsoneditor.css" rel="stylesheet">
   <link href="bower_components/angular-chart.js/dist/angular-chart.min.css" rel="stylesheet">
@@ -42,6 +43,23 @@
 <body data-ng-app="revapm.Portal">
 <alert-list></alert-list>
 <div ui-view="layout" class="layout"></div>
+
+<script type="text/javascript" src="bower_components/PACE/pace.js"></script>
+<!--<link href="bower_components/PACE/themes/red/pace-theme-minimal.css" rel="stylesheet">-->
+<script>
+  paceOptions = {
+    ajax: {
+      trackMethods: ['GET', 'POST'],
+      trackWebSockets: false,
+      ignoreURLs : ['/config_status/']
+    }, // disabled
+    document: true, // disabled
+    eventLag: false, // disabled
+    elements: {
+      selectors: ['.my-page']
+    }
+  };
+</script>
 
 
 <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
