--- a/code/dev/parts/users/new.html
+++ b/code/dev/parts/users/new.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-sm-12">
     <h2 class="pull-left page-title">
-      Add new User
+      Add New User
     </h2>
   </div>
 </div>
