--- a/code/parts/layout.html
+++ b/code/parts/layout.html
@@ -231,7 +231,7 @@
                 </nav>
             </div>
             <div class="fit main-layout">
-                <div id="top"></div>
+                <div id="top" class="my-page"></div>
                 <div class="page-inner" ui-view="page"></div>
             </div>
             <div class="col-md-12">
