--- a/code/parts/signup/signup.html
+++ b/code/parts/signup/signup.html
@@ -9,7 +9,9 @@
         <div class="panel-body">
           <div class="row">
             <div class="text-center col-md-4">
-              <img class="img-responsive" src="images/logo_color.png" alt="Logo" />
+              <a href="https://www.revapm.com/" target="_blank">
+                <img class="img-responsive" src="images/logo_color.png" alt="Logo" />
+              </a>
             </div>
             <div class="col-md-4 text-center ">
               <h1 class="signup">Sign Up</h1></div>
