--- a/code/parts/signup/billing_plans.html
+++ b/code/parts/signup/billing_plans.html
@@ -41,7 +41,7 @@
                                     ${{item.monthly_fee}}/mon
                                 </h1>
                                 <hr>
-                                <div>{{item.description}}</div>
+                                <div class="billing-plan-description">{{item.description}}</div>
                                 <hr>
                                 <h4>
                                     Overage Charges
