Add in "Billing Statements" Subscription Summary

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -186,6 +186,7 @@
 
 <script type="text/javascript" src="js/portal/profile/profile.module.js"></script>
 <script type="text/javascript" src="js/portal/profile/profile.routes.js"></script>
+<script type="text/javascript" src="js/portal/profile/directives/subscription-summary.js"></script>
 <script type="text/javascript" src="js/portal/profile/controller/profileEdit.controller.js"></script>
 <script type="text/javascript" src="js/portal/profile/controller/activityLog.controller.js"></script>
 <script type="text/javascript" src="js/portal/profile/controller/2fa.controller.js"></script>
