--- a/code/parts/profile/statements.html
+++ b/code/parts/profile/statements.html
@@ -45,6 +45,16 @@
                         </div>
                     </div>
                 </div>
+                <div class="panel-heading"  ng-if="!_loading" >
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="pull-left">
+                                <h2>Summary</h2>
+                            </div>
+                             <subscription-summary ng-model="summary.subscription"></subscription-summary>
+                        </div>
+                    </div>
+                </div>
                 <div class="panel-heading">
                     <div class="row">
                         <div class="col-md-12">
