Fixes in the new billing summary section

--- a/code/dev/parts/profile/directives/subscription-summary.tpl.html
+++ b/code/dev/parts/profile/directives/subscription-summary.tpl.html
@@ -29,7 +29,7 @@
         <td>{{subscription.state | firstUpper}}</td>
       </tr>
       <tr>
-        <td>Activated At</td>
+        <td>Activated On</td>
         <td>{{subscription.activated_at | date }}</td>
       </tr>
     </table>
