usage report, spinner

--- a/code/dev/parts/reports/usage-web.html
+++ b/code/dev/parts/reports/usage-web.html
@@ -55,7 +55,10 @@
                   </div>
 
                 </form>
+              </div>
 
+              <div class="pull-right" ng-if="_loading" >
+                <i style="font-size: 34px;" class="glyphicon glyphicon-refresh glyphicon-spin"></i>
               </div>
 
             </div>
