usage report minor corrections, mobile analytics bug fixed

--- a/code/dev/parts/reports/usage-web.html
+++ b/code/dev/parts/reports/usage-web.html
@@ -58,7 +58,7 @@
               </div>
 
               <div class="pull-right" ng-if="_loading" >
-                <i style="font-size: 34px;" class="glyphicon glyphicon-refresh glyphicon-spin"></i>
+                <i style="font-size: 34px;" class="glyphicon glyphicon-refresh spin"></i>
               </div>
 
             </div>
