update btns disabled without app/domain selected

--- a/code/dev/parts/reports/charts/mobile-base-traffic.html
+++ b/code/dev/parts/reports/charts/mobile-base-traffic.html
@@ -10,6 +10,7 @@
          fl-devices="flDevices"
          fl-operators="flOperators"
          fl-networks="flNetworks"
+         fl-disabled="flDisabled"
          ng-filters="filters"
          on-filter="reload()"></div>
 
