--- a/code/dev/parts/reports/mobile-ab.html
+++ b/code/dev/parts/reports/mobile-ab.html
@@ -34,6 +34,7 @@
                    fl-devices="devices"
                    fl-countries="countries"
                    fl-operators="operators"
+                   fl-disabled="_loading || !application"
                    fl-networks="networks"></div>
             </div>
           </div>
@@ -48,6 +49,7 @@
                    fl-devices="devices"
                    fl-countries="countries"
                    fl-operators="operators"
+                   fl-disabled="_loading || !application"
                    fl-networks="networks"
                    fl-interval="50"
                    fl-limit="3000"></div>
@@ -64,6 +66,7 @@
                    fl-devices="devices"
                    fl-countries="countries"
                    fl-operators="operators"
+                   fl-disabled="_loading || !application"
                    fl-networks="networks"></div>
             </div>
           </div>
@@ -78,6 +81,7 @@
                    fl-devices="devices"
                    fl-countries="countries"
                    fl-operators="operators"
+                   fl-disabled="_loading || !application"
                    fl-networks="networks"></div>
             </div>
           </div>
