--- a/code/dev/parts/reports/charts/fbt-average.html
+++ b/code/dev/parts/reports/charts/fbt-average.html
@@ -36,7 +36,7 @@
       </div>
 
       <div class="form-group">
-        <button class="btn btn-info" ng-click="reloadTrafficStats()">
+        <button class="btn btn-info" ng-click="reloadTrafficStats()" ng-disabled="_loading || !ngDomain">
           <i class="glyphicon glyphicon-refresh"></i>&nbsp;
           Update Report
         </button>
