--- a/code/dev/parts/reports/charts/mobile-base-top-objects.html
+++ b/code/dev/parts/reports/charts/mobile-base-top-objects.html
@@ -9,6 +9,7 @@
          fl-devices="flDevices"
          fl-operators="flOperators"
          fl-networks="flNetworks"
+         fl-disabled="flDisabled"
          ng-filters="filters"
          on-filter="reload()"></div>
 
