--- a/code/dev/parts/reports/charts/mobile-hits.html
+++ b/code/dev/parts/reports/charts/mobile-hits.html
@@ -11,7 +11,7 @@
       </div>
 
       <div class="form-group">
-        <button class="btn btn-info" ng-click="reloadTrafficStats()">
+        <button class="btn btn-info" ng-click="reloadTrafficStats()" ng-disabled="_loading">
           <i class="glyphicon glyphicon-refresh"></i>&nbsp;
           Update Report
         </button>
