--- a/code/dev/parts/reports/mobile-traffic.html
+++ b/code/dev/parts/reports/mobile-traffic.html
@@ -34,7 +34,8 @@
                    fl-devices="devices"
                    fl-countries="countries"
                    fl-operators="operators"
-                   fl-networks="networks"></div>
+                   fl-networks="networks"
+                   fl-disabled="_loading || !application"></div>
             </div>
           </div>
           <hr>
@@ -48,7 +49,8 @@
                    fl-devices="devices"
                    fl-countries="countries"
                    fl-operators="operators"
-                   fl-networks="networks"></div>
+                   fl-networks="networks"
+                   fl-disabled="_loading || !application"></div>
             </div>
           </div>
           <hr>
@@ -62,7 +64,8 @@
                    fl-devices="devices"
                    fl-countries="countries"
                    fl-operators="operators"
-                   fl-networks="networks"></div>
+                   fl-networks="networks"
+                   fl-disabled="_loading || !application"></div>
             </div>
           </div>
 
