--- a/code/dev/parts/reports/top-reports.html
+++ b/code/dev/parts/reports/top-reports.html
@@ -47,7 +47,7 @@
                   </div>
 
                   <div class="form-group">
-                    <button class="btn btn-info" ng-click="onDomainSelected()">
+                    <button class="btn btn-info" ng-click="onDomainSelected()" ng-disabled="_loading || !domain">
                       <i class="glyphicon glyphicon-refresh"></i>&nbsp;
                       Update Reports
                     </button>
