--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -22,7 +22,7 @@
                     <i class="sub-menu-icon fa fa-android"></i>
                     Android
                 </a>
-                <a ui-sref-active="active" ui-sref="index.apps.wm" class="side-menu-sub-item">
+                <a ui-sref-active="active" ui-sref="index.apps.windows_mobile" class="side-menu-sub-item">
                     <i class="sub-menu-icon fa fa-windows"></i>
                     Windows Mobile
                 </a>
