--- a/code/parts/apps/configure.html
+++ b/code/parts/apps/configure.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-12">
       <h2 class="pull-left page-title">
-        Configure App <strong ng-if="model.app_name">{{model.app_name}}</strong>
+        Edit App <strong ng-if="model.app_name">{{model.app_name}}</strong>
       </h2>
     </div>
   </div>
