--- a/code/parts/apps/new.html
+++ b/code/parts/apps/new.html
@@ -45,7 +45,7 @@
                      ng-model="model.app_name"
                      ng-maxlength="50"
                      id="app_name"
-                     placeholder="App name"
+                     placeholder="App name (for example, 'MyCoolApp')"
                      required>
             </div>
           </div>
